--- a/theyalow/index.html
+++ b/theyalow/index.html
@@ -160,8 +160,8 @@
                         <div class="section_2_content">
 
                             <div class="section_2_content_left">
-                                <img class="monitor" src="assets/monitor.png">
-                                <img class="tablet" src="assets/phone.png">
+                                <img class="monitor" src="assets/Monitor.png">
+                                <img class="tablet" src="assets/Phone.png">
                                 <img class="phone" src="assets/phone_small.png">
 
 
